--- a/PrjVeterinariaAPIs/appsettings.json
+++ b/PrjVeterinariaAPIs/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "cn1": "server=DESKTOP-B6GUKHD\\SQLEXPRESS;database=flowersshoes;integrated security=true;"
+    "cn1": "server=DESKTOP-B6GUKHD\\SQLEXPRESS;database=Veterinaria;integrated security=true;"
   },
   "Logging": {
     "LogLevel": {
